--- a/main.html
+++ b/main.html
@@ -8,8 +8,51 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- add table here -->
-
+    <table width=100% border=1 cellspacing=4px;>
+    <thead>
+		<tr bgcolor="blue">
+			<th>NAME</th>
+			<th>KILLS</th>
+			<th>SAVED</th>
+			<th>DEATHS</th>
+			<th>REVIVES</th>
+			<th>WIN</th>
+		</tr>	
+		<tbody>
+			<tr bgcolor="grey">
+				<td>Aman</td>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+			<tr bgcolor="sky blue">
+				<td>Naman</td>
+				<td>13</td>
+				<td>4</td>
+				<td>5</td>
+				<td>3</td>
+				<td>0</td>
+			</tr>
+			<tr bgcolor="orange">
+				<td>Aditya</td>
+				<td>18</td>
+				<td>3</td>
+				<td>4</td>
+				<td>1</td>
+				<td>3</td>
+			</tr>
+			<tr bgcolor="pink">
+				<td>Nitin</td>
+				<td>5</td>
+				<td>1</td>
+				<td>4</td>
+				<td>4</td>
+				<td>0</td>
+			</tr>
+		</tbody>
+	</table>
         
 </body>
 </html>
